[package]
name = "statefile"
version = "0.1.0"
description = "Store application state as a file on disk."
repository = "https://github.com/liamkinne/statefile-rs"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }
